# renderer

./: CMakeLists.txt  build.py  思路.txt
cmake/: common.cmake
resources/: aurora.config
resources/shader/: fs_simple_shader.fs  vs_simple_shader.vs
src/: CameraController.cpp  CameraController.h  DrawComponent.cpp  DrawComponent.h  MyApp.cpp  MyApp.h  main.cpp
src/app/: App3D.cpp  App3D.h  Aurora.h
src/common/: AuroraDef.h  Clock.h  Config.cpp  Config.h  FileHelper.cpp  FileHelper.h  FileIdentifer.h  LogManager.cpp  LogManager.h  MemroyStream.h  Noncopyable.h  Profiler.h  Singleton.h  StringUtil.h  VertexLayout.cpp
src/component/: GameObjectFactory.cpp  GameObjectFactory.h
src/core/: Camera.cpp  Context.cpp  Context.h  Event.h  EventManager.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h  Renderable.h  SceneManager.cpp  SceneManager.h  SubMesh.cpp  SubMesh.h
src/core/command/: InstanceBatchCommand.cpp  InstanceBatchCommand.h  MeshCommand.cpp  MeshCommand.h  RenderCommand.cpp  RenderCommand.h
src/core/component/: Camera.cpp  Camera.h  GameObject.cpp  GameObjectFactory.cpp  IComponent.h  ISceneNode.cpp  ISceneNode.h  MeshRenderer.cpp  MeshRenderer.h  Renderable.cpp  Renderer.cpp  Renderer.h  SceneNode.cpp  SceneNode.h  SceneNode2D.h  SpriteRenderer.cpp  SpriteRenderer.h
src/platform/: GLFW3Window.cpp  GLFW3Window.hpp  Window.h
src/renderer/: DeviceContext.cpp  DeviceContext.h  GpuBuffer.cpp  GpuBuffer.h  IndexGpuBuffer.cpp  IndexGpuBuffer.h  Material.h  RenderOperation.h  RenderState.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  RendererState.h  Shader.cpp  Shader.h  ShaderType.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexGpuBuffer.cpp  VertexGpuBuffer.h  VertexTypes.h  glSupport.h
src/resources/: MeshLoadDesc.cpp  MeshLoadDesc.h  Resources.cpp  Resources.h  ShaderLoadDesc.cpp  ShaderLoadDesc.h  TextureLoadDesc.cpp
src/test/: CMakeLists.txt
